feat: start and end weekly plan task
